--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,12 @@
+base_path:
+    pattern:   /
+    defaults:  { _controller: MkoxSolmikBundle:Solmik:index }
+
+mkox_user:
+    resource: "@MkoxUserBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 mkox_solmik:
     resource: "@MkoxSolmikBundle/Controller/"
     type:     annotation
@@ -6,3 +15,10 @@ mkox_solmik:
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+    
+#fos_user_login:
+#    path:      /login
+#    defaults:  { _controller: MkoxSolmikBundle:Solmik:index }
